--- a/src/components/apps/cm/Cm.scss
+++ b/src/components/apps/cm/Cm.scss
@@ -183,4 +183,206 @@
             }
         }
     }
+
+
+
+
+
+
+
+
+
+/*
+    .chord-zero-line {
+        fill: none;
+        stroke: #ffdfad;
+        stroke-width: 3px;
+    }
+
+    .chord-string {
+        fill: none;
+        stroke: #f2b148;
+    }
+
+    .chord-lad {
+        fill: none;
+        stroke: #f4f0e8;
+    }
+
+    .chord-application {
+        margin-top: 1em;
+    }
+
+    .chord-board {
+        position: relative;
+        background-color: #634008;
+        display: inline-block;
+        vertical-align: middle;
+    }
+
+    .chord-point {
+        stroke-linecap: round;
+        stroke-width: 12px;
+        stroke: red;
+
+        &.shadow {
+            stroke: grey;
+        }
+    }
+
+    .first-lad-counter {
+        font-size: 1em;
+        margin-right: .5em;
+        display: inline-block;
+        vertical-align: middle;
+    }
+
+    .region-editor {
+
+        .region-editor-block {
+            position: relative;
+
+            .float-button-panel {
+                --size: 1.2em;
+
+                position: absolute;
+                top: calc(var(--y) * 1px - var(--size) * 1.2);
+                left: calc(var(--x) * 1px);
+
+                display: flex;
+                transition: .5s;
+
+                &.hidden {
+                    opacity: 0;
+                    pointer-events: none;
+                }
+
+                .button {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    width: var(--size);
+                    height: var(--size);
+                    border-radius: .3em;
+                    margin-left: .2em;
+                    opacity: 1;
+
+                    &.close {
+                        --svg-color: var(--color-no-3);
+
+                        background: var(--color-no-6);
+                    }
+
+                    &.remove {
+                        --svg-color: white;
+
+                        background: var(--color-ko-2);
+                    }
+
+                    &.flag {
+                        --svg-color: var(--color-br-6);
+
+                        background: var(--color-br-2);
+                    }
+
+                    &.numeric {
+                        background: var(--color-no-4);
+                        color: white;
+
+                        &.active {
+                            background: var(--color-no-5);
+                        }
+                    }
+                }
+            }
+        }
+
+        .com-ord-list {
+            &.region-edition {
+                &.active {
+                    .com-order-block {
+                        &.inactive {
+                            color: grey;
+                        }
+
+                        .inactive {
+                            color: grey;
+                            pointer-events: none;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+
+    .pre-post-chords-binder {
+        display: inline-block;
+        background-color: #ccc;
+        opacity: .5;
+        width: .7em;
+        height: 1em;
+        vertical-align: middle;
+    }
+
+
+    .com-editor-wrapper {
+        .com-editor {
+            display: inline-block;
+            max-width: 100%;
+            width: 100vw;
+            vertical-align: middle;
+            margin-top: 1rem;
+
+            .btn-panel {
+                margin-left: 1rem;
+                font-size: 1.2em;
+
+                &,
+                & * {
+                    display: inline-block;
+                    vertical-align: middle;
+                }
+            }
+
+            .textarea-col-wrapper {
+                margin-bottom: 1.5em;
+
+                .com-editor-textarea {
+                    background-color: rgba(0, 0, 0, 0);
+                    color: var(--white);
+                    border: solid .7px var(--color-light-far);
+                    outline: 0;
+                    max-width: 97%;
+                    width: 100vw;
+                    font-size: var(--font-size);
+                    resize: none;
+                    font-family: main;
+
+                    &.empty {
+                        border: solid 1px var(--color-ok-4);
+                    }
+                }
+            }
+        }
+
+        &.active {
+            margin-left: 0 !important;
+        }
+    }
+
+    .execution-item {
+        &.separated {
+            margin-top: 50px;
+        }
+
+        &.other-author {
+            border-top: 5px dashed var(--color-far);
+            margin-top: 30px;
+            padding-top: 30px;
+        }
+    }
+
+}/* */
 }
