--- a/src/complect/load-indicated-content/LoadIndicatedContent.scss
+++ b/src/complect/load-indicated-content/LoadIndicatedContent.scss
@@ -14,7 +14,7 @@
 
         >.load-indicated-content-spinner-container {
             .load-indicated-content-spinner {
-                animation: fade-in .3s, rotate 1.5s infinite linear;
+                animation: fade-in .3s, rotate .7s infinite linear;
             }
         }
     }
