--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,6 @@ body {
   --footer-height: 70px;
   --fullscreen-transition: top .3s, bottom .3s, height .3s, margin-top .3s;
 
-  --header-container-margin-top: 0;
   --header-top: 0;
   --header-container-top: var(--header-height);
   --footer-bottom: 0;
@@ -106,6 +105,12 @@ input {
 
 .relative {
   position: relative;
+}
+
+.sticky {
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 .inactive {
