--- a/src/components/apps/cm/Cm.scss
+++ b/src/components/apps/cm/Cm.scss
@@ -4,30 +4,6 @@
     height: 100vh;
 
     >.main-container {
-        --content-height: calc(100vh - var(--header-height) - var(--header-container-height) - var(--footer-height));
-        --main-content-height: calc(100vh - var(--header-height) - var(--footer-height));
-
-        .collapse-fullscreen-button {
-            position: absolute;
-            top: -30px;
-            right: 0;
-            margin: 10px;
-            transition: top .2s;
-            z-index: 50;
-        }
-
-        &.fullscreen-mode {
-            --header-top: calc(0px - var(--header-height));
-            --header-container-top: calc(0px - var(--header-container-height));
-            --footer-bottom: calc(0px - var(--footer-height));
-            --content-height: 100vh;
-            --main-content-height: 100vh;
-
-            .collapse-fullscreen-button {
-                top: 0;
-            }
-        }
-
         >.header {
             position: static;
             margin-top: var(--header-top);
@@ -43,6 +19,7 @@
             background-color: var(--color--5);
             overflow: hidden;
             transition: var(--fullscreen-transition);
+            margin-top: var(--content-top);
 
             >.phase-content {
                 height: 100%;
@@ -50,10 +27,12 @@
 
             .header-content {
                 width: 100vw;
+                position: absolute;
                 background-color: var(--color--1);
                 height: var(--header-container-height);
                 padding: var(--main-gap);
                 transition: var(--fullscreen-transition);
+                top: var(--header-container-top);
 
                 .action-button {
                     padding: var(--main-gap);
