--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -11,7 +11,7 @@
     --footer-bottom: 0;
     --content-height: calc(100vh - var(--header-height) - var(--header-container-height) - var(--footer-height));
     --main-content-height: calc(100vh - var(--header-height) - var(--footer-height));
-    --content-top: calc(var(--header-container-top) + var(--header-container-height));
+    --content-top: var(--header-container-height);
 
     background-color: var(--current-bg);
     font-family: var(--font-family);
