--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -12,12 +12,17 @@
     --content-height: calc(100vh - var(--header-height) - var(--footer-height));
     --content-top: var(--header-content-height);
 
-    background-color: var(--current-bg);
-    font-family: var(--font-family);
-    color: var(--text-color);
-
     .main-big-gap {
       margin: var(--main-big-gap);
+    }
+
+    .margin-gap {
+        margin: var(--main-gap);
+    }
+
+    .margin-gap-v {
+        margin-top: var(--main-gap);
+        margin-bottom: var(--main-gap);
     }
 
     .collapse-fullscreen-button {
