--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -12,8 +12,12 @@
     --content-height: calc(100vh - var(--header-height) - var(--footer-height));
     --content-top: var(--header-content-height);
 
+    position: absolute;
+    top: 0;
+    overflow: hidden;
+
     .main-big-gap {
-      margin: var(--main-big-gap);
+        margin: var(--main-big-gap);
     }
 
     .margin-gap {
