--- a/src/index.scss
+++ b/src/index.scss
@@ -44,6 +44,8 @@ body {
 
 * {
   -webkit-tap-highlight-color: transparent;
+  outline: 0;
+  border: none;
 }
 
 :not(svg) {
@@ -96,6 +98,7 @@ input {
 .pointers-none {
   pointer-events: fill;
 }
+
 .pointers-all {
   pointer-events: all;
 }
