translation show fixed

--- a/src/components/apps/cm/translation/Translation.scss
+++ b/src/components/apps/cm/translation/Translation.scss
@@ -3,6 +3,9 @@
     --size: 50vmin;
     --max-size: 300px;
     --min-size: 200px;
+    
+    height: 100vh;
+    width: 100vw;
 
     .translation-screen-wrapper {
         position: relative;
